_sass/_web.scss
$relay-red: #E6464C;
$relay-blue: #18518f;
$relay-grey: #1E1E1E;

// ritandeclan

// blue
$ritandeclan-blue: #75d0bb;
// pink
$ritandeclan-pink: #f7b7c7;
// orange
$ritandeclan-orange: #f18d11;
// grey
$ritandeclan-grey: #656478;
// red
$ritandeclan-red: #e9243c;

// sva
$sva-today-blue: #00add3;

$sva-today-red: #dc0032;

$sva-today-grey: #4c4d4f;

// sightseer

$sightseer-red: #E91C30;

$sightseer-blue: #69D1EE;

$sightseer-grey: $relay-grey;

@mixin web-project-colors($color-1, $color-2, $color-3) {
	// blue 
	border-color: $color-2;
	// grey
	color: $color-3;

	.img-container {	
		border-color: $color-1;
		background-color: $color-2;
	}

	.description-container {

		border-color: $color-1;

		.title-container {
			&:before {
				// pink
				background-color: $color-1;

				border-top-color: $color-1;

				.title {
					color: $color-3;
				}

			}
		}

		.tech-wrapper {

			.tech-title {
				border-bottom-color: $color-1;
			}

		}
	}
		
}


.web {

	.web-project {

		position: relative;
		display: flex;
		flex-direction: row;
		justify-content: space-between;
		align-content: center;
		width: 100%;
		padding: 10px;
		margin: 10vw 0 15vw 0;
		border: 2px solid $site-purple;
		text-decoration:  none;
		color: $site-purple;

		@include border-box();
		&.first {
			@include section-in-left();
		}

		&:hover {
			box-shadow: 27px 23px 107px -6px rgba(0,0,0,0.32);
			cursor: pointer;
			text-decoration: none;
		}
		// opacity: 0;


		&.show-on-scroll {
			opacity: 0;
			transform: translateY(4em) rotateZ(-2deg);
			transition: transform 4s .25s cubic-bezier(0,1,.3,1),
			opacity .3s .25s ease-out;
			will-change: transform, opacity;
			// @include reveal-on-scroll();

			&.visible {
				opacity: 1;
				transform: rotateZ(0deg);
			} 
		}

		// &:hover {
		// 	outline: 10px solid black;
		// 	cursor: pointer;
		// }

		.img-container,
		.description-container {
			position: relative;
			display: block;
			// width: 50%;
			flex: 1 1 auto;
		}


		.img-container {
			margin: 0 $default-margin 0 0;
			position: relative;
			display: block;
			max-height: 350px;
			overflow: hidden;
			border: 2px solid $site-purple;

			width: 65%;
			z-index: 5;

			// @include image-in-top();

			.image {
				position: relative;
				display: block;
				width: 100%;
				height: auto;
			}
		}

		.description-container {
			position: relative;
			display: block;

			width: 35%;

			margin: 0 0 0 $default-margin;

			border: 1px solid $site-purple;
			z-index: 1;

			// @include section-in-left;	

			// @include text-in-left(1s, cubic-bezier(0, 0.58, 0, 1));


			.title-container {

				position: relative;
				display: block;
				// transform: skewX(20deg);
				// margin-left: -50px;
				// padding-left: 50px;
				// z-index: 200;

				&:before {
				    content :'';
					background-color: $site-purple;

				    position:absolute;
				    top:10px;left:-30%;
				    width:120%; height:100%;
				    // background: rgba(90,190,230,0.9);
				    transform-origin:0 0;
				    transform:skew(-30deg);
				    z-index:-1;
				    border-top: 2px solid $site-purple;
				}

				.title {	
					// transform: skewX(-20deg);
					@include header-font();
					color: $site-light-blue;

					// font-family: NunitoSans-ExtraBold, sans-serif;
					// font-family: MedulaOne, sans-serif;
					// font-family: EBGaramond-Bold, serif;
					font-size: 20px;
					font-weight: 800;
					text-transform: uppercase;
					padding: $default-margin;
					padding-top: 25px;

					padding-bottom: 0;
					@include border-box();
					// @include text-in-left(1s, cubic-bezier(0, 0.58, 0, 1));
					z-index: 5;
					// @include prefix-animation-delay(0.2s);		
				}
			}

			.description {
				// font-family: EBGaramond-Medium, serif;
				@include body-font();
				// font-family: NunitoSans, sans-serif;
				font-weight: 400;
				padding: $default-margin;
				padding-bottom: 0;
				@include border-box();
				// @include text-in-left(1.5s, cubic-bezier(0, 0.58, 0, 1));
				z-index: 1;
				// @include prefix-animation-delay(0.5s);			
			}

			.tech-wrapper {
				padding: $default-margin;
				padding-bottom: 0;
				@include border-box();

				// @include prefix-animation-delay(0.8s);		
				.tech-title {

					@include header-font();

					// font-family: NunitoSans-ExtraBold, sans-serif;
					// font-family: NunitoSans, sans-serif;
					// font-family: EBGaramond-Bold, serif;

					// font-weight: 800;
					position: relative;
					display: block;
					border-bottom: 1px solid $site-blue;
					// @include text-in-left(1.75s, cubic-bezier(0, 0.58, 0, 1));	
					z-index: 1;
				}
				.tech-list {
					position: relative;
					display: block;
					z-index: 1;
					overflow: hidden;
					@include body-light();
					// font-family: NunitoSans-ExtraLight, sans-serif;
					font-weight: 100;
					&:after {
						content: ', ';
						position: relative;
						color: black;
						display: inline-block
					}
					&:last-of-type {
						&:after {
							content: '';
						}
					}
					// @include tech-in-left(2s, cubic-bezier(1, 0.04, 0.46, 0.75));
					// $colors-list: #111 #222 #333 #444 #555;

					// $techs: 10;

					// @for $i from 1 through $techs {
					//     // $i: index($techs, $tech);
					//     // $timeCalc: .05 * $i;
					//     $time: #{$i*.33+1}s;
					//     .tech-#{$i} { 
					//     	position: relative;
					//     	display: inline-block;
					//     	background-color: transparent;
					//     	// opacity: 0;
					//        @include tech-in-left($time, cubic-bezier(0, 0.38, 0.21, 0.99));	
					//     }
					// }

				}
			}
		}

		
		&.visible.play,
		&.first {
			.description-container {

				@include text-in-left(1s, cubic-bezier(0, 0.58, 0, 1));

				.title {
					@include text-in-left(1s, cubic-bezier(0, 0.58, 0, 1));		
				}
				.description {
					@include text-in-left(1.5s, cubic-bezier(0, 0.58, 0, 1));	
				}

				.tech-wrapper {
			
					.tech-title {
						@include text-in-left(1.75s, cubic-bezier(0, 0.58, 0, 1));	
					}
					.tech-list {
						$techs: 10;

						@for $i from 1 through $techs {
						    // $i: index($techs, $tech);
						    // $timeCalc: .05 * $i;
						    $time: #{$i*.33+1}s;
						    .tech-#{$i} { 
						    	position: relative;
						    	display: inline-block;
						    	background-color: transparent;
						    	// opacity: 0;
						       @include tech-in-left($time, cubic-bezier(0, 0.38, 0.21, 0.99));	
						    }
						}

						.tech-item {
							&:after {
								content: ',';
							}

							&:last-of-type {
								&:after {
									display: none;
								}
							}
						}

					}
				}
			}

		}


		&.ritandeclan {

			@include web-project-colors($ritandeclan-pink, $ritandeclan-blue, $ritandeclan-grey);
		}

		&.sva-today-builder {
			@include web-project-colors($sva-today-red, $sva-today-blue, $sva-today-grey);
		}

		&.relay {
			@include web-project-colors($relay-red, $relay-blue, $relay-grey);
		}

		&.sightseer {
			@include web-project-colors($sightseer-red, $sightseer-blue, $sightseer-grey);
		}

		// responsive styles

		@media (max-width: 1000px) {

			.description-container {
				.title-container {
					&:before {
						left: -25%;
					}
				}
			}

		}

		@media (max-width: 910px) {

			.img-container {
				max-height: 275px;
			}

			.description-container {

				.title-container {

					&:before {
						transform: skew(-22deg);
					}
					.title {
						@include header-font-mid();
					}
				}

				.description {
					@include body-font-mid();
				}


			}

		}
		@media (max-width: 850px) {

			.description-container {

				.title-container {

					&:before {
						width: 140%;
						left: -30%;
						transform: skew(-34deg);
					}

				}
			}

		}

		@media (max-width: 768px) {

			flex-direction: column;

			.img-container,
			.description-container {
				width: 95%;
				margin: 0 auto;
			}

			.img-container {
				max-height: 300px;
			}

			.description-container {

				border: 2px solid;

				.title-container {
					&:before {
						width: 105%;
						left: -10%;
					}
				}

				.tech-wrapper {
					.tech-list {
						@include display-flex();
						@include flex-direction-row();
						@include justify-content-space-between();

						.tech-item {
							padding: 0 10px;
							flex: 1 1 auto;
							&:after {
								display: none;
							}
						}
					}
				}

			}
		}


		@media (max-width: 600px) {

			flex-direction: column;

			.img-container,
			.description-container {
				width: 95%;
			}

			.img-container {
				max-height: 300px;
			}

			.description-container {
				margin-bottom: 10px;


				.title-container {
					&:before {
						height: 35px;
					}
					
					.title {
						padding-top: 15px;
					}
				}

				.description,
				.tech-wrapper {
					padding: 5px 15px 10px 15px;
				}

				.description {
					@include body-font-small();
					margin: 0;
					padding-top: 0;
				}



				.tech-wrapper {
					height: auto;

					.tech-title {
						margin-bottom: 5px;
					}

					.tech-list {

						margin-bottom: 0;

						.tech-item {
							padding: 0 1px 0 0;
							font-size: 17px;

						}
					}
				}

			}
		}

		@media (max-width: 500px) {
			.description-container {
				.tech-wrapper {
					.tech-list {

						display: inline;

						.tech-item {

							padding: 0 1px 0 0;

							&:after {
								display: inline;
							}
						}
					}
				}
			}
		}

	}
}

